[package]
name = "rust_todolist"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features= ["derive"]}
serde_json = "1.0"
chrono = {version ="0.4", features = ["serde"]}
chrono-tz = {version = "0.10.4", features = ["serde"]}
clearscreen = "4.0"

[[bin]]
name = "todo"
path = "src/main.rs"
